# src/dataContract/request/playlistSongRequest.ts
@@ -1,3 +1,0 @@
-export interface PlaylistSongRequest{
-    idCancion: string
-}
